android/build_errors.txt

> Configure project :app
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Configure project :capacitor-cordova-android-plugins
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-android:preBuild UP-TO-DATE
> Task :capacitor-android:preDebugBuild UP-TO-DATE
> Task :capacitor-android:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-app:preBuild UP-TO-DATE
> Task :capacitor-app:preDebugBuild UP-TO-DATE
> Task :capacitor-app:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-browser:preBuild UP-TO-DATE
> Task :capacitor-browser:preDebugBuild UP-TO-DATE
> Task :capacitor-browser:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-community-file-opener:preBuild UP-TO-DATE
> Task :capacitor-community-file-opener:preDebugBuild UP-TO-DATE
> Task :capacitor-community-file-opener:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-community-text-to-speech:preBuild UP-TO-DATE
> Task :capacitor-community-text-to-speech:preDebugBuild UP-TO-DATE
> Task :capacitor-community-text-to-speech:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-cordova-android-plugins:preBuild UP-TO-DATE
> Task :capacitor-cordova-android-plugins:preDebugBuild UP-TO-DATE
> Task :capacitor-cordova-android-plugins:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-filesystem:preBuild UP-TO-DATE
> Task :capacitor-filesystem:preDebugBuild UP-TO-DATE
> Task :capacitor-filesystem:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-share:preBuild UP-TO-DATE
> Task :capacitor-share:preDebugBuild UP-TO-DATE
> Task :capacitor-share:writeDebugAarMetadata UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :capacitor-android:generateDebugResValues UP-TO-DATE
> Task :capacitor-android:generateDebugResources UP-TO-DATE
> Task :capacitor-android:packageDebugResources UP-TO-DATE
> Task :capacitor-app:generateDebugResValues UP-TO-DATE
> Task :capacitor-app:generateDebugResources UP-TO-DATE
> Task :capacitor-app:packageDebugResources UP-TO-DATE
> Task :capacitor-browser:generateDebugResValues UP-TO-DATE
> Task :capacitor-browser:generateDebugResources UP-TO-DATE
> Task :capacitor-browser:packageDebugResources UP-TO-DATE
> Task :capacitor-community-file-opener:generateDebugResValues UP-TO-DATE
> Task :capacitor-community-file-opener:generateDebugResources UP-TO-DATE
> Task :capacitor-community-file-opener:packageDebugResources UP-TO-DATE
> Task :capacitor-community-text-to-speech:generateDebugResValues UP-TO-DATE
> Task :capacitor-community-text-to-speech:generateDebugResources UP-TO-DATE
> Task :capacitor-community-text-to-speech:packageDebugResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugResValues UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:packageDebugResources UP-TO-DATE
> Task :capacitor-filesystem:generateDebugResValues UP-TO-DATE
> Task :capacitor-filesystem:generateDebugResources UP-TO-DATE
> Task :capacitor-filesystem:packageDebugResources UP-TO-DATE
> Task :capacitor-share:generateDebugResValues UP-TO-DATE
> Task :capacitor-share:generateDebugResources UP-TO-DATE
> Task :capacitor-share:packageDebugResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-android:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-android:processDebugManifest UP-TO-DATE
> Task :capacitor-app:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-app:processDebugManifest UP-TO-DATE
> Task :capacitor-browser:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-browser:processDebugManifest UP-TO-DATE
> Task :capacitor-community-file-opener:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-community-file-opener:processDebugManifest UP-TO-DATE
> Task :capacitor-community-text-to-speech:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-community-text-to-speech:processDebugManifest UP-TO-DATE
> Task :capacitor-cordova-android-plugins:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-cordova-android-plugins:processDebugManifest UP-TO-DATE
> Task :capacitor-filesystem:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-filesystem:processDebugManifest UP-TO-DATE
> Task :capacitor-share:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-share:processDebugManifest UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :capacitor-android:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-android:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-android:generateDebugRFile UP-TO-DATE
> Task :capacitor-app:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-app:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-app:generateDebugRFile UP-TO-DATE
> Task :capacitor-browser:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-browser:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-browser:generateDebugRFile UP-TO-DATE
> Task :capacitor-community-file-opener:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-community-file-opener:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-community-file-opener:generateDebugRFile UP-TO-DATE
> Task :capacitor-community-text-to-speech:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-community-text-to-speech:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-community-text-to-speech:generateDebugRFile UP-TO-DATE
> Task :capacitor-cordova-android-plugins:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugRFile UP-TO-DATE
> Task :capacitor-filesystem:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-filesystem:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-filesystem:generateDebugRFile UP-TO-DATE
> Task :capacitor-share:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-share:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-share:generateDebugRFile UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :capacitor-android:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-android:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-android:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-app:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-app:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-app:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-browser:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-browser:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-browser:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-community-file-opener:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-community-file-opener:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-community-file-opener:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-community-text-to-speech:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-community-text-to-speech:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-community-text-to-speech:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-cordova-android-plugins:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-cordova-android-plugins:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-cordova-android-plugins:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-filesystem:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :capacitor-filesystem:compileDebugKotlin UP-TO-DATE
> Task :capacitor-filesystem:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-filesystem:compileDebugJavaWithJavac NO-SOURCE
> Task :capacitor-filesystem:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-share:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-share:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-share:bundleLibCompileToJarDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
C:\Users\jefer\Desktop\MINHA_ESCALA_VERSAO_TABLET\android\app\src\main\java\com\gestorpro\app\NotificationServiceExtension.java:11: error: cannot find symbol
import com.onesignal.notifications.INotificationsExtension;
                                  ^
  symbol:   class INotificationsExtension
  location: package com.onesignal.notifications
C:\Users\jefer\Desktop\MINHA_ESCALA_VERSAO_TABLET\android\app\src\main\java\com\gestorpro\app\NotificationServiceExtension.java:12: error: cannot find symbol
import com.onesignal.notifications.internal.OSNotification;
                                           ^
  symbol:   class OSNotification
  location: package com.onesignal.notifications.internal
C:\Users\jefer\Desktop\MINHA_ESCALA_VERSAO_TABLET\android\app\src\main\java\com\gestorpro\app\NotificationServiceExtension.java:13: error: cannot find symbol
import com.onesignal.notifications.internal.OSNotificationReceivedEvent;
                                           ^
  symbol:   class OSNotificationReceivedEvent
  location: package com.onesignal.notifications.internal
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

> Task :app:compileDebugJavaWithJavac FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.
102 actionable tasks: 1 executed, 101 up-to-date

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 43s
